@@ -7,6 +7,7 @@
           (thanks to hosaka).
 - Converted to C++11.
 - Improved compliance with CppCoreGuidelines.
+- Integated common CMake CXX module.
 
 ------ old releases ------------------------------
 
